# Chess4x4-library

./: README.md  setup.cfg
chess4x4/: __init__.py  board.py  game.py  pieces.py  utils.py
tests/: test_board.py  test_game.py  test_pieces.py
