[metadata]
name = chess4x4
version = 0.1.0
author = Krishna Yadav
author_email = krishna.indev@gmail.com
description = A 4x4 Chess library (King + Rook vs King) with move validation and win/draw detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kr812345/Chess4x4-library.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
